30-dashboard/10-Ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kube-system
  annotations:
    # Certificate should already be generated by the "master" ingress.
    # (Although we wil need to sync it to the current namespace.)
    # cert-manager.io/cluster-issuer: duckdns-letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.org/mergeable-ingress-type: minion
spec:
  rules:
  - host: "dashboard.be-hive.duckdns.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
  tls:
  - hosts:
    - dashboard.be-hive.duckdns.org
    secretName: star-be-hive-tls
