30-dashboard/99-Ingress-dashboard.yaml
# Preserved for reference.  When installing from the Helm chart, the chart can generate
# an ingress resource for us.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
  annotations:
    # Certificate should already be generated by the "master" ingress.
    # (Although we wil need to sync it to the current namespace.)
    # cert-manager.io/cluster-issuer: duckdns-letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.org/mergeable-ingress-type: minion
spec:
  rules:
  - host: "dashboard.be-hive.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
  tls:
  - hosts:
    - dashboard.be-hive.cloud
    secretName: be-hive-cloud-tls
